cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(stereo_calibrator C CXX )
if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Debug)
endif(NOT CMAKE_BUILD_TYPE)
if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR
   "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	set(warnings "-Wall -Wextra -Werror")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" )
	set(warnings "/W4 /WX /EHsc")
endif()
if (NOT CONFIGURED_ONCE)
	set(CMAKE_CXX_FLAGS "${warnings}"
	CACHE STRING "Flags used by the compiler during all build types" FORCE)
	set(CMAKE_C_FLAGS "${warnings}"
	CACHE STRING "Flags used by the compiler during all build types." FORCE)
endif()
set(raspicam_DIR "/home/pi/Desktop/cpp_dev/opencv/raspicam-0.1.6/build")
set(Boost_DIR "/home/pi/Desktop/cpp_dev/opencv/boost/boost_1_66_0")
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.62.0 REQUIRED COMPONENTS system thread program_options)
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
IF (OpenCV_FOUND AND raspicam_FOUND AND Boost_FOUND)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${Boost_INCLUDE_DIRS})
add_executable(calibrator stereo_calibration.cpp)
set_property(TARGET calibrator PROPERTY CXX_STANDARD 14)
target_link_libraries(calibrator ${raspicam_CV_LIBS})
target_link_libraries(calibrator ${Boost_LIBRARIES})
ELSE()
MESSAGE(FATAL_ERROR "External Libs could not be loaded")
ENDIF()
set(CONFIGURED_ONCE TRUE CACHE INTERNAL "A flag showing that CMake has configured at least once")
